agregue unos colores e imagenes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <section class="tarjeta"> 
             <div class="tarjeta-contenedor">
-                <img src="./imagenes/muñeco.svg" alt="Imagen Muñeco" class="img-muñeco">
+                <img src="./imagenes/female-2026853_1280.png" alt="Imagen Muñeco" class="img-muñeco">
                 <p class="texto-uno">Ningún mensaje fue encontrado</p>
                 <p class="texto-dos">Ingresa el texto que desees encriptar o desencriptar</p>
             </div>
